--- a/src/Markdig.Wpf/Themes/generic.xaml
+++ b/src/Markdig.Wpf/Themes/generic.xaml
@@ -1,107 +1,196 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<!--
+   Copyright 2025 masterLazy
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+-->
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:markdig="clr-namespace:Markdig.Wpf">
-  <!-- Document styles -->
-  <Style TargetType="{x:Type FlowDocument}" x:Key="{x:Static markdig:Styles.DocumentStyleKey}">
-    <Setter Property="FontFamily" Value="Calibri" />
-    <Setter Property="TextAlignment" Value="Left" />
-  </Style>
-  <Style TargetType="{x:Type List}">
-    <Setter Property="Margin" Value="40,0,0,0" />
-    <Setter Property="Padding" Value="0,0,0,0" />
-  </Style>
-  <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.CodeBlockStyleKey}">
-    <Setter Property="Background" Value="#ffd3d3d3" />
-    <Setter Property="FontFamily" Value="Consolas, Lucida Sans Typewriter, Courier New" />
-  </Style>
-  <Style TargetType="{x:Type Run}" x:Key="{x:Static markdig:Styles.CodeStyleKey}">
-    <Setter Property="Background" Value="#ffd3d3d3" />
-    <Setter Property="FontFamily" Value="Consolas, Lucida Sans Typewriter, Courier New" />
-  </Style>
-  <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.Heading1StyleKey}">
-    <Setter Property="FontSize" Value="42" />
-    <Setter Property="Foreground" Value="#ff000000" />
-    <Setter Property="FontWeight" Value="Bold" />
-  </Style>
-  <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.Heading2StyleKey}">
-    <Setter Property="FontSize" Value="20" />
-    <Setter Property="Foreground" Value="#ff000000" />
-    <Setter Property="FontWeight" Value="Bold" />
-  </Style>
-  <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.Heading3StyleKey}">
-    <Setter Property="FontSize" Value="18" />
-    <Setter Property="Foreground" Value="#ff000000" />
-    <Setter Property="FontWeight" Value="Bold" />
-  </Style>
-  <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.Heading4StyleKey}">
-    <Setter Property="FontSize" Value="18" />
-    <Setter Property="Foreground" Value="#ff000000" />
-    <Setter Property="FontWeight" Value="Light" />
-    <Setter Property="TextDecorations" Value="Underline" />
-  </Style>
-  <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.Heading5StyleKey}">
-    <!-- no changes -->
-  </Style>
-  <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.Heading6StyleKey}">
-    <!-- no changes -->
-  </Style>
-  <Style TargetType="{x:Type Hyperlink}" x:Key="{x:Static markdig:Styles.HyperlinkStyleKey}">
-    <!-- no changes -->
-  </Style>
-  <Style TargetType="{x:Type Image}" x:Key="{x:Static markdig:Styles.ImageStyleKey}">
-    <Setter Property="MaxHeight" Value="{Binding RelativeSource={RelativeSource Self}, Path=Source.(BitmapSource.PixelHeight)}" />
-    <Setter Property="MaxWidth" Value="{Binding RelativeSource={RelativeSource Self}, Path=Source.(BitmapSource.PixelWidth)}" />
-  </Style>
-  <Style TargetType="{x:Type Section}" x:Key="{x:Static markdig:Styles.QuoteBlockStyleKey}">
-    <Setter Property="BorderBrush" Value="LightGray" />
-    <Setter Property="BorderThickness" Value="4,0,0,0" />
-    <Setter Property="Foreground" Value="Gray" />
-    <Setter Property="Padding" Value="16,0,0,0" />
-  </Style>
-  <Style TargetType="{x:Type Table}" x:Key="{x:Static markdig:Styles.TableStyleKey}">
-    <Setter Property="BorderBrush" Value="Black"/>
-    <Setter Property="BorderThickness" Value="0,0,1,1"/>
-    <Setter Property="CellSpacing" Value="0"/>
-  </Style>
-  <Style TargetType="{x:Type TableCell}" x:Key="{x:Static markdig:Styles.TableCellStyleKey}">
-    <Setter Property="BorderBrush" Value="Black"/>
-    <Setter Property="BorderThickness" Value="1,1,0,0"/>
-  </Style>
-  <Style TargetType="{x:Type TableRow}" x:Key="{x:Static markdig:Styles.TableHeaderStyleKey}">
-    <Setter Property="FontWeight" Value="Bold"/>
-  </Style>
-  <Style TargetType="{x:Type CheckBox}" x:Key="{x:Static markdig:Styles.TaskListStyleKey}">
-    <Setter Property="Margin" Value="0,0,0,-2" />
-  </Style>
-  <Style TargetType="{x:Type Line}" x:Key="{x:Static markdig:Styles.ThematicBreakStyleKey}">
-    <Setter Property="Stretch" Value="Fill" />
-    <Setter Property="Stroke" Value="Black" />
-  </Style>
-  <Style TargetType="{x:Type Span}" x:Key="{x:Static markdig:Styles.SubscriptStyleKey}">
-    <Setter Property="Typography.Variants" Value="Subscript" />
-  </Style>
-  <Style TargetType="{x:Type Span}" x:Key="{x:Static markdig:Styles.SuperscriptStyleKey}">
-    <Setter Property="Typography.Variants" Value="Superscript" />
-  </Style>
-  <Style TargetType="{x:Type Span}" x:Key="{x:Static markdig:Styles.StrikeThroughStyleKey}">
-    <Setter Property="TextBlock.TextDecorations" Value="Strikethrough" />
-  </Style>
-  <Style TargetType="{x:Type Span}" x:Key="{x:Static markdig:Styles.InsertedStyleKey}">
-    <Setter Property="TextBlock.TextDecorations" Value="Underline" />
-  </Style>
-  <Style TargetType="{x:Type Span}" x:Key="{x:Static markdig:Styles.MarkedStyleKey}">
-    <Setter Property="Background" Value="Yellow" />
-  </Style>
+    <!-- Document styles -->
+    <Style TargetType="{x:Type FlowDocument}" x:Key="{x:Static markdig:Styles.DocumentStyleKey}">
+        <Setter Property="FontFamily" Value="Arial, sans-serif" />
+        <Setter Property="FontSize" Value="15" />
+        <Setter Property="Foreground" Value="#333333" />
+        <Setter Property="LineHeight" Value="1.25" />
+        <Setter Property="TextAlignment" Value="Left" />
+        <Setter Property="PagePadding" Value="5,30,5,30" />
+    </Style>
 
-  <!-- MarkdownViewer Template-->
-  <Style TargetType="markdig:MarkdownViewer">
-    <Setter Property="Template">
-      <Setter.Value>
-        <ControlTemplate TargetType="markdig:MarkdownViewer">
-          <FlowDocumentScrollViewer Document="{TemplateBinding Document}"
+    <Style TargetType="{x:Type List}">
+        <Setter Property="Margin" Value="0,0,0,16" />
+        <Setter Property="Padding" Value="0,0,0,0" />
+    </Style>
+
+    <Style TargetType="{x:Type ListItem}">
+        <Setter Property="Margin" Value="0,0,0,4" />
+    </Style>
+
+    <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.CodeBlockStyleKey}">
+        <Setter Property="Background" Value="#f3f3f3" />
+        <Setter Property="FontFamily" Value="Consolas, sans-serif" />
+        <Setter Property="FontSize" Value="13.5" />
+        <Setter Property="Foreground" Value="#333333" />
+        <Setter Property="Margin" Value="0,16,0,16" />
+        <Setter Property="LineHeight" Value="1.45" />
+    </Style>
+
+    <Style TargetType="{x:Type Run}" x:Key="{x:Static markdig:Styles.CodeStyleKey}">
+        <Setter Property="Background" Value="#f3f3f3" />
+        <Setter Property="FontFamily" Value="Consolas, sans-serif" />
+        <Setter Property="FontSize" Value="13.5" />
+        <Setter Property="Foreground" Value="#333333" />
+    </Style>
+
+    <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.Heading1StyleKey}">
+        <Setter Property="FontSize" Value="30" />
+        <Setter Property="Foreground" Value="#333333" />
+        <Setter Property="FontWeight" Value="SemiBold" />
+        <Setter Property="Margin" Value="0,16,0,8" />
+        <Setter Property="BorderBrush" Value="#d0d0d0" />
+        <Setter Property="BorderThickness" Value="0,0,0,1" />
+        <Setter Property="LineHeight" Value="1.25" />
+    </Style>
+
+    <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.Heading2StyleKey}">
+        <Setter Property="FontSize" Value="22.5" />
+        <Setter Property="Foreground" Value="#333333" />
+        <Setter Property="FontWeight" Value="SemiBold" />
+        <Setter Property="Margin" Value="0,16,0,8" />
+        <Setter Property="BorderBrush" Value="#d0d0d0" />
+        <Setter Property="BorderThickness" Value="0,0,0,1" />
+        <Setter Property="LineHeight" Value="1.25" />
+    </Style>
+
+    <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.Heading3StyleKey}">
+        <Setter Property="FontSize" Value="18.75" />
+        <Setter Property="Foreground" Value="#333333" />
+        <Setter Property="FontWeight" Value="SemiBold" />
+        <Setter Property="Margin" Value="0,16,0,8" />
+        <Setter Property="LineHeight" Value="1.25" />
+    </Style>
+
+    <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.Heading4StyleKey}">
+        <Setter Property="FontSize" Value="15" />
+        <Setter Property="Foreground" Value="#333333" />
+        <Setter Property="FontWeight" Value="SemiBold" />
+        <Setter Property="Margin" Value="0,16,0,8" />
+        <Setter Property="LineHeight" Value="1.25" />
+        <Setter Property="TextDecorations" Value="None" />
+    </Style>
+
+    <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.Heading5StyleKey}">
+        <Setter Property="FontSize" Value="15" />
+        <Setter Property="Foreground" Value="#333333" />
+        <Setter Property="FontWeight" Value="SemiBold" />
+        <Setter Property="Margin" Value="0,16,0,8" />
+        <Setter Property="LineHeight" Value="1.25" />
+    </Style>
+
+    <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.Heading6StyleKey}">
+        <Setter Property="FontSize" Value="15" />
+        <Setter Property="Foreground" Value="#333333" />
+        <Setter Property="FontWeight" Value="SemiBold" />
+        <Setter Property="Margin" Value="0,16,0,8" />
+        <Setter Property="LineHeight" Value="1.25" />
+    </Style>
+
+    <Style TargetType="{x:Type Paragraph}" x:Key="{x:Static markdig:Styles.ParagraphStyleKey}">
+        <Setter Property="Margin" Value="0,4,0,4" />
+        <Setter Property="TextAlignment" Value="Left" />
+    </Style>
+
+    <Style TargetType="{x:Type Hyperlink}" x:Key="{x:Static markdig:Styles.HyperlinkStyleKey}">
+        <Setter Property="Foreground" Value="#0366d6" />
+        <Setter Property="TextDecorations" Value="None" />
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="TextDecorations" Value="Underline" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style TargetType="{x:Type Image}" x:Key="{x:Static markdig:Styles.ImageStyleKey}">
+        <Setter Property="MaxHeight" Value="{Binding RelativeSource={RelativeSource Self}, Path=Source.(BitmapSource.PixelHeight)}" />
+        <Setter Property="MaxWidth" Value="{Binding RelativeSource={RelativeSource Self}, Path=Source.(BitmapSource.PixelWidth)}" />
+        <Setter Property="Margin" Value="4" />
+    </Style>
+
+    <Style TargetType="{x:Type Section}" x:Key="{x:Static markdig:Styles.QuoteBlockStyleKey}">
+        <Setter Property="BorderBrush" Value="#d0d0d0" />
+        <Setter Property="BorderThickness" Value="4,0,0,0" />
+        <Setter Property="Foreground" Value="#6a737d" />
+        <Setter Property="Margin" Value="0,0,0,16" />
+        <Setter Property="Padding" Value="16,0,0,0" />
+    </Style>
+
+    <Style TargetType="{x:Type Table}" x:Key="{x:Static markdig:Styles.TableStyleKey}">
+        <Setter Property="BorderBrush" Value="#d0d0d0"/>
+        <Setter Property="BorderThickness" Value="0,0,1,1"/>
+        <Setter Property="CellSpacing" Value="0"/>
+        <Setter Property="Margin" Value="0,0,0,16"/>
+    </Style>
+
+    <Style TargetType="{x:Type TableCell}" x:Key="{x:Static markdig:Styles.TableCellStyleKey}">
+        <Setter Property="BorderBrush" Value="#d0d0d0"/>
+        <Setter Property="BorderThickness" Value="1,1,0,0"/>
+        <Setter Property="Padding" Value="8"/>
+    </Style>
+
+    <Style TargetType="{x:Type TableRow}" x:Key="{x:Static markdig:Styles.TableHeaderStyleKey}">
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Background" Value="#f3f3f3"/>
+    </Style>
+
+    <Style TargetType="{x:Type CheckBox}" x:Key="{x:Static markdig:Styles.TaskListStyleKey}">
+        <Setter Property="Margin" Value="0,0,0,-2" />
+    </Style>
+
+    <Style TargetType="{x:Type Line}" x:Key="{x:Static markdig:Styles.ThematicBreakStyleKey}">
+        <Setter Property="Stretch" Value="Fill" />
+        <Setter Property="Stroke" Value="#d0d0d0" />
+        <Setter Property="StrokeThickness" Value="1" />
+        <Setter Property="Margin" Value="0,24,0,24" />
+    </Style>
+
+    <Style TargetType="{x:Type Span}" x:Key="{x:Static markdig:Styles.SubscriptStyleKey}">
+        <Setter Property="Typography.Variants" Value="Subscript" />
+    </Style>
+
+    <Style TargetType="{x:Type Span}" x:Key="{x:Static markdig:Styles.SuperscriptStyleKey}">
+        <Setter Property="Typography.Variants" Value="Superscript" />
+    </Style>
+
+    <Style TargetType="{x:Type Span}" x:Key="{x:Static markdig:Styles.StrikeThroughStyleKey}">
+        <Setter Property="TextBlock.TextDecorations" Value="Strikethrough" />
+    </Style>
+
+    <Style TargetType="{x:Type Span}" x:Key="{x:Static markdig:Styles.InsertedStyleKey}">
+        <Setter Property="TextBlock.TextDecorations" Value="Underline" />
+    </Style>
+
+    <Style TargetType="{x:Type Span}" x:Key="{x:Static markdig:Styles.MarkedStyleKey}">
+        <Setter Property="Background" Value="Yellow" />
+    </Style>
+
+    <!-- MarkdownViewer Template-->
+    <Style TargetType="markdig:MarkdownViewer">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="markdig:MarkdownViewer">
+                    <FlowDocumentScrollViewer Document="{TemplateBinding Document}"
                                     ScrollViewer.VerticalScrollBarVisibility="Auto"/>
-        </ControlTemplate>
-      </Setter.Value>
-    </Setter>
-  </Style>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
